order form backend + real html messsage content

--- a/templates/event/event_order.html
+++ b/templates/event/event_order.html
@@ -9,6 +9,7 @@
 <script>
 $(function() {
     $( ".datepicker" ).datepicker();
+    $( ".datepicker" ).datepicker('setDate', new Date());
 });
 </script>
 <!--JQuery DatePicker css and js ends-->
@@ -51,39 +52,39 @@ ASUSF Sponsored? &nbsp;
 
 
 PROJECT TYPE
-<input type="checkbox" id="type_poster" name="tags" value="type_poster">
+<input type="checkbox" id="type_poster" name="project_type" value="type_poster">
 <label style="display:inline;" for="type_poster">Poster (11*17)</label>
 </input>
 &nbsp;
-<input type="checkbox" id="type_flyer" name="tags" value="type_flyer">
+<input type="checkbox" id="type_flyer" name="project_type" value="type_flyer">
 <label style="display:inline;" for="type_flyer">Flyer (8.5*11)</label>
 </input>
 &nbsp;
-<input type="checkbox" id="type_handbill" name="tags" value="type_handbill">
+<input type="checkbox" id="type_handbill" name="project_type" value="type_handbill">
 <label style="display:inline;" for="type_handbill">Handbills (1/4 of Flyer)</label>
 </input>
 &nbsp;
-<input type="checkbox" id="type_businesscard" name="tags" value="type_businesscard">
+<input type="checkbox" id="type_businesscard" name="project_type" value="type_businesscard">
 <label style="display:inline;" for="type_businesscard">Business Card (2*3.5)</label>
 </input>
 &nbsp;
-<input type="checkbox" id="type_pamphlet" name="tags" value="type_pamphlet">
+<input type="checkbox" id="type_pamphlet" name="project_type" value="type_pamphlet">
 <label style="display:inline;" for="type_pamphlet">Pamphlet</label>
 </input>
 &nbsp;
-<input type="checkbox" id="type_invitation" name="tags" value="type_invitation">
+<input type="checkbox" id="type_invitation" name="project_type" value="type_invitation">
 <label style="display:inline;" for="type_invitation">Invitation</label>
 </input>
 &nbsp;
-<input type="checkbox" id="type_logo" name="tags" value="type_logo">
+<input type="checkbox" id="type_logo" name="project_type" value="type_logo">
 <label style="display:inline;" for="type_logo">Logo</label>
 </input>
 &nbsp;
-<input type="checkbox" id="type_banner" name="tags" value="type_banner">
+<input type="checkbox" id="type_banner" name="project_type" value="type_banner">
 <label style="display:inline;" for="type_banner">Banner</label>
 </input>
 &nbsp;
-<input type="checkbox" id="type_other" name="tags" value="type_other">
+<input type="checkbox" id="type_other" name="project_type" value="type_other">
 <label style="display:inline;" for="type_other">Other</label>
 </input>
 &nbsp;
