--- a/templates/base.html
+++ b/templates/base.html
@@ -117,7 +117,7 @@ Subheader here
 
     <div class="layout-primary-wrap">
     
-    <script src="http://masonry.desandro.com/jquery.masonry.min.js"></script>
+    <script src="/webhost_media/static/jquery.masonry.min.js"></script>
     <script type="text/javascript">
     $(function(){
       var $container = $('#layout-posts-masonry');
