--- a/templates/base.html
+++ b/templates/base.html
@@ -132,4 +132,5 @@
     </div><!-- .layout-main-wrap -->
 
 </div><!-- .layout-page-wrap -->
+<script src="//connect.facebook.net/en_US/all.js"></script>
 </body>
